# SACP-Suite

./: .env.example  .gitignore  DARK_THEME_QUICK_REFERENCE.md  DARK_THEME_SUMMARY.md  Dockerfile.api  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  strange-attractor-math
configs/: ingestion.yaml
datasets/: README.md  manifest.json
docs/: Deep Dive into SACP SUITE Architecture and Enhance Attractor Capabilities.docx  colab.md  dashboard-debugging-report.md  fractalhedron.md  frontend-module-guide.md  refactor-2025-12-03.md  repoprompt-summary-11-22-2025.txt  sacp-suite-overview.md  self-tuning.md  test.ipynb
docs/adr/adr-chemistry-dashboard/: README.md
docs/adr/chapters/: x01-autocatalytic-duffing-rings.md  x02-duffing-coupled-soliton-networks.md  x04-instrumented-autocatalytic-duffing-rings.md  x05-hemostasis-as-adr.md  x06-adr-grytsay-dashboard.md  x07-adr-krebs-canonical-tile.md  x08-bouquet-clc-stack.md
macos/SACP Suite Launcher.app/Contents/: Info.plist
src/sacp_suite/: __init__.py  __main__.py
src/sacp_suite/abtc/: __init__.py  base.py  engine.py  frac_chem_sprott.py
src/sacp_suite/api/: __init__.py  deps.py  main.py
src/sacp_suite/core/: __init__.py  datasets.py  plugin_api.py
src/sacp_suite/db/: base.py  models.py
src/sacp_suite/demos/: self_tuned_lorenz.py
src/sacp_suite/modules/: __init__.py  strange_attractors.py
src/sacp_suite/self_tuning/: __init__.py  manager.py  protocols.py
tests/: test_cogmetrics_api.py  test_fractalhedron.py  test_self_tuned_lorenz.py  test_self_tuning_manager.py  test_smoke.py
(+74 files in other folders)
