[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sacp-suite"
version = "0.1.0"
description = "SACP Suite Starter — unified API + UI + plugin core"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Edward & Team" }]
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.23",
  "pydantic>=2.7",
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "plotly>=5.24",
  "dash>=2.16",
  "requests>=2.32",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
  "pybloom-live>=4.0.0",
  "SQLAlchemy>=2.0"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.23",
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9"
]
ui = [
  "dash>=2.16",
  "plotly>=5.24",
  "requests>=2.32"
]
all = [
  "fastapi>=0.115",
  "uvicorn>=0.23",
  "pydantic>=2.7",
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "plotly>=5.24",
  "dash>=2.16",
  "requests>=2.32",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
  "pybloom-live>=4.0.0"
]

[project.scripts]
sacp-suite-api = "sacp_suite.api.main:run"
sacp-suite-ui = "sacp_suite.ui.app:main"
sacp-suite = "sacp_suite.ui.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
